@@ -9,9 +9,10 @@ see github:https://github.com/mathslinux/lwqq
 * send / recv group messages
 * send / recv qq face (you should use webqq faces theme in settings)
 * avatar
-* change buddy / group markname;
+* change buddy markname;
 * change buddy category;
 * confirm buddy added request.
+* visit buddy qzone
 
 ## empathy support (via telepathy-haze)
 * send / recv text messages
@@ -36,9 +37,10 @@ lwqq库是一个非常安全有效的webqq协议的库.
 * 支持群聊天
 * 支持发送接受表情(在设置中使用webqq表情主题)
 * 支持头像
-* 支持设置好友/QQ群备注
+* 支持设置好友备注
 * 支持更改好友分组
 * 支持确认添加好友请求
+* 访问QQ空间
 
 ## empathy support (via telepathy-haze)
 * 支持发送接受文本消息
